# playlist-bot

./: Dockerfile  pyproject.toml
.github/workflows/: app-build.yml
src/: __main__.py
