[tool.poetry]
name = "playlist-bot"
version = "0.1.0"
description = ""
authors = ["Denis Malin <denis@malina.page>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.5"
duckdb = "^0.9.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
